# realtime-telemetry-pipeline

./: .checkov.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-images.yml  ci.yml  gitleaks.yml  terraform.yml
app/: README.md  requirements.txt  sensor_data.py  streamlit_app.py
app/.streamlit/: config.toml
dbt/: README.md  dbt_project.yml  profiles.yml  requirements.txt
dbt/models/marts/: _models.yml  accept_rate_minutely.sql  reading_volume.sql  rejections_by_reason.sql  sensor_minutely.sql
dbt/models/staging/: _sources.yml  stg_readings.sql  stg_rejections.sql
dbt/tests/: assert_accept_rate_in_range.sql  assert_sensor_minutely_grain_unique.sql
docker/: Dockerfile.dbt  Dockerfile.simulator  Dockerfile.spark
docs/: looker-studio.md
infra/: docker-compose.yml
infra/grafana/dashboards/: iot-sensors.json  pipeline-health.json
infra/grafana/provisioning/alerting/: contactpoints.yaml  policies.yaml  rules.yaml
infra/grafana/provisioning/dashboards/: provider.yml
infra/grafana/provisioning/datasources/: prometheus.yml  redis.yml
infra/k8s/: README.md
infra/k8s/base/: kustomization.yaml  secretproviderclass.yaml  serviceaccount.yaml
infra/k8s/base/dbt/: cronjob.yaml
infra/k8s/base/gmp/: frontend.yaml  podmonitoring.yaml
infra/k8s/base/grafana/: deployment.yaml
infra/k8s/base/kafka/: service.yaml  statefulset.yaml
infra/k8s/base/kafka-ui/: deployment.yaml
infra/k8s/base/redis-insight/: deployment.yaml
infra/prometheus/: prometheus.yml
infra/spark/: metrics.properties
infra/terraform/: .gitignore  README.md  apis.tf  compute.tf  iap-tunnels.sh  network.tf  outputs.tf  push-secrets.sh  secrets.tf  startup.sh.tftpl  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
infra/terraform/app/: bigquery.tf  compute.tf  fleet.tf  gke.tf  network.tf  outputs.tf  startup.sh.tftpl  variables.tf  versions.tf  workload_identity.tf
infra/terraform/foundation/: .gitignore  apis.tf  artifact_registry.tf  bigquery.tf  monitoring.tf  outputs.tf  secrets.tf  variables.tf  versions.tf  wif.tf  workload_identity.tf
promo/: 00_master_plan.md  01_caption_script_hero.md  02_shot_list.md  03_demo_recipe.md
scripts/: contract.py  data_quality.py  drift.py  metrics_spec.py  sensor_avro.py  sensor_simulator.py  spark_transform.py
tests/: conftest.py  test_app_sensor_data.py  test_clean_data_extra.py  test_contract.py  test_data_quality.py  test_drift.py  test_event_time.py  test_metrics_spec.py  test_parse_stream.py  test_redis_sink.py  test_rejected_data.py  test_sensor_avro.py  test_sensor_simulator.py  test_spark_transform.py
tests/integration/: test_redis_timeseries_integration.py
(+5 files in other folders)
